@@ -518,7 +518,7 @@
 477,0,6,4,0,0x1,0,10,1,no,0,0,0,weapon,0	//WS_WEAPONREFINE#Upgrade Weapon#
 478,3,6,2,0,0x3,3,10,1,no,0,0,0,none,0	//CR_SLIMPITCHER#Aid Condensed Potion#
 479,1,6,16,0,0x1,0,5,1,yes,0,0,0,weapon,0	//CR_FULLPROTECTION#Full Protection#
-480,4,8,1,0,0,0,5,5,no,0,0,0,weapon,0	//PA_SHIELDCHAIN#Shield Chain#
+480,5,8,1,0,0,0,5,5,no,0,0,0,weapon,0	//PA_SHIELDCHAIN#Shield Chain#
 481,0,0,0,0,0,0,5,0,no,0,0,0,none,0	//HP_MANARECHARGE#Mana Recharge#
 482,0,6,4,0,0x1,0,5,1,no,0,0,0,magic,0	//PF_DOUBLECASTING#Double Casting#
 483,9,6,2,0,0x1,1,1,1,no,0,0,0,none,0	//HW_GANBANTEIN#Ganbantein#
