@@ -136,7 +136,7 @@ enum {
 	SC_REJECTSWORD,
 	SC_MARIONETTE,
 	SC_MARIONETTE2,
-	SC_UNUSED,	//Unused (was SC_MOONLIT)
+	SC_CHANGEUNDEAD,
 	SC_JOINTBEAT,
 	SC_MINDBREAKER, //130
 	SC_MEMORIZE,
